# MoWork

./: bun.lockb  index.html  package.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: agent_loop.rs  commands.rs  lib.rs  llm.rs  main.rs  terminal.rs
src-tauri/src/memory/: mod.rs  store.rs  tools.rs
src-tauri/src/tools/: bash.rs  grep.rs  mod.rs  raycast.rs
src/components/: ChatBubble.tsx  ChatInput.tsx  Kira.tsx  Terminal.tsx
